# traggo-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  schema.graphql
.github/workflows/: ci.yml  publish.yml
graphql/: create_tag.graphql  create_time_span.graphql  remove_tag.graphql  remove_time_span.graphql  stats.graphql  stop_timer.graphql  suggest_tag_values.graphql  tags.graphql  time_spans.graphql  timers.graphql  update_tag.graphql  update_time_span.graphql
src/: config.rs  cursor.rs  error.rs  graphql.rs  main.rs  tools.rs  traggo_client.rs  validation.rs
